fix: align user icon + fixes padding issue on navbar menu items

--- a/less/header.less
+++ b/less/header.less
@@ -128,7 +128,7 @@
 	}
 
 	#user_dropdown {
-		padding: 10px 15px;
+		padding: 9px 15px;
 
 		img, .user-icon {
 			.user-icon-style(30px, 1.8rem, 50%);
